# zed-taskpaper

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MAINTAINER.md  README.md  extension.toml  pixi.toml
.github/workflows/: ci.yml
crates/taskpaper-ls/: Cargo.toml
crates/taskpaper-ls/src/: actions.rs  analysis.rs  dates.rs  main.rs  model.rs  util.rs  workspace.rs
examples/: demo.taskpaper
grammars/taskpaper/src/: node-types.json
grammars/taskpaper/test/corpus/: basics.txt  edge-cases.txt
languages/taskpaper/: config.toml  highlights.scm  outline.scm  runnables.scm
scripts/: bootstrap-rust.sh  taskpaper_count.py
src/: lib.rs
tree-sitter-taskpaper/: grammar.js  tree-sitter.json
tree-sitter-taskpaper/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-taskpaper/test/corpus/: basics.txt  dim.txt  edge-cases.txt
