[package]
name = "taskpaper-ls"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "A lightweight language server for TaskPaper plain-text todo lists."
publish = false

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
lsp-server = "0.8"
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
